tests/snapshots/snapshots__compile_snapshots@match_decorated_class.zts.snap
---
source: tests/snapshots.rs
expression: out.code
input_file: tests/fixtures/match_decorated_class.zts
---
function __ztsAbsurd(x: never): never {
    throw {
        name: "ZtsNonExhaustiveMatch",
        message: "zts: non-exhaustive match",
        kind: x
    };
}
function __ztsMatch<T, R>(v: T, f: (v: T) => R): R {
    return f(v);
}
function tagged(): ClassDecorator {
    return ()=>{};
}
type T = {
    kind: "K";
    v: number;
} | {
    kind: "L";
    w: number;
};
@tagged()
export class Svc {
    pick(t: T): number {
        return __ztsMatch(t, (__m)=>{
            const __k = __m.kind;
            if (__k === "K") {
                const { v } = __m;
                return v;
            }
            if (__k === "L") {
                const { w } = __m;
                return w;
            }
            return __ztsAbsurd(__k);
        });
    }
}
