tests/snapshots/snapshots__compile_snapshots@match_hygiene.zts.snap
---
source: tests/snapshots.rs
expression: out.code
input_file: tests/fixtures/match_hygiene.zts
---
function __ztsAbsurd(x: never): never {
    const e: any = new globalThis.Error("zts: non-exhaustive match");
    e.ztsTag = x;
    throw e;
}
type T = {
    kind: "K";
    v: number;
} | {
    kind: "L";
    w: number;
};
declare const t: T;
const __m = 99;
const r = ((__m1)=>{
    const __k = __m1.kind;
    if (__k === "K") {
        const { v } = __m1;
        return v + __m;
    }
    if (__k === "L") {
        const { w } = __m1;
        return w;
    }
    return __ztsAbsurd(__k);
})(t);
