tests/snapshots/snapshots__compile_snapshots@match_identifier_regression.zts.snap
---
source: tests/snapshots.rs
expression: out.code
input_file: tests/fixtures/match_identifier_regression.zts
---
declare const str: string;
declare const re: RegExp;
declare function match(n: number): number;
const a = str.match(re);
const b = match(1);
const c = match(1) + 2;
const d = match(1) ? 2 : 3;
