tests/snapshots/snapshots__compile_snapshots@match_missing_arm.zts.snap
---
source: tests/snapshots.rs
expression: out.code
input_file: tests/fixtures/match_missing_arm.zts
---
import { __ztsAbsurd } from "@zestty/core";
type Shape = {
    kind: "Circle";
    radius: number;
} | {
    kind: "Square";
    side: number;
};
declare const shape: Shape;
const area = ((__m)=>{
    const __k = __m.kind;
    if (__k === "Circle") {
        const { radius } = __m;
        return radius * 2;
    }
    return __ztsAbsurd(__k);
})(shape);
