tests/snapshots/snapshots__compile_snapshots@match_nested.zts.snap
---
source: tests/snapshots.rs
expression: out.code
input_file: tests/fixtures/match_nested.zts
---
function __ztsAbsurd(x: never): never {
    throw {
        name: "ZtsNonExhaustiveMatch",
        message: "zts: non-exhaustive match",
        kind: x
    };
}
function __ztsMatch<T, R>(v: T, f: (v: T) => R): R {
    return f(v);
}
type Inner = {
    kind: "A";
    x: number;
} | {
    kind: "B";
    y: number;
};
type Outer = {
    kind: "Left";
    inner: Inner;
} | {
    kind: "Right";
    label: string;
};
declare const o: Outer;
const n = __ztsMatch(o, (__m)=>{
    const __k = __m.kind;
    if (__k === "Left") {
        const { inner } = __m;
        return __ztsMatch(inner, (__m)=>{
            const __k = __m.kind;
            if (__k === "A") {
                const { x } = __m;
                return x;
            }
            if (__k === "B") {
                const { y } = __m;
                return y * 2;
            }
            return __ztsAbsurd(__k);
        });
    }
    if (__k === "Right") {
        const { label } = __m;
        return label.length;
    }
    return __ztsAbsurd(__k);
});
