tests/snapshots/snapshots__compile_snapshots@match_outer_narrowing.zts.snap
---
source: tests/snapshots.rs
expression: out.code
input_file: tests/fixtures/match_outer_narrowing.zts
---
function __ztsAbsurd(x: never): never {
    throw globalThis.Object.assign(new globalThis.Error("zts: non-exhaustive match"), {
        ztsTag: x
    });
}
type T = {
    kind: "K";
    v: number;
} | {
    kind: "L";
    w: number;
};
declare const t: T;
let s: string | number = "a";
export function reassign(): void {
    s = 1;
}
let r = 0;
if (typeof s === "string") {
    r = ((__m)=>{
        const __k = __m.kind;
        if (__k === "K") {
            const { v } = __m;
            return s.length + v;
        }
        if (__k === "L") {
            const { w } = __m;
            return w;
        }
        return __ztsAbsurd(__k);
    })(t);
}
export { r };
